# evalexpr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: benchs.rs
src/: function.rs  lib-old.rs  lib.rs
src/builtin/: mod.rs
src/configuration/: mod.rs
src/context/: mod.rs
src/context/predefined/: mod.rs
src/custom_functions/: adaptive_stop_loss_trade_model.rs  atan.rs  back.rs  basher_trade_model.rs  bucket_functions.rs  calc_conviction.rs  channel_monitoring_template.rs  compiled_transpose_calcuation_template.rs  date_utils.rs  expression_functions.rs  is_null.rs  mod.rs  pow.rs  report_uri_functions.rs  rolling_min.rs  rolling_stdev.rs  simple_cumilative_returns.rs  simple_cumulative_sum.rs  simple_moving_average.rs  sqrt.rs  triangular_moving_average.rs
src/error/: display.rs  mod.rs
src/expr/: mod.rs
src/expression/: mod.rs
src/feature_serde/: mod.rs
src/function/: builtin.rs  mod.rs
src/interface/: mod.rs
src/math/: mod.rs
src/node/: mod.rs
src/operator/: display.rs  mod.rs
src/predefined/: mod.rs
src/templates/: adaptive_stop_loss_trade_model.rs  bucket_data_discrete.rs  bucket_data_template.rs  channel_monitoring_template.rs  compiled_transpose_calcuation_template.rs  correlation_analysis_template.rs  correnlation_analysis_template.rs  mod.rs  ordered_float.rs  rolling_zscore.rs  simple_trade_model.rs  test_utils.rs  utils.rs
src/token/: display.rs  mod.rs
src/tree/: display.rs  iter.rs  mod.rs
src/value/: display.rs  mod.rs  numeric_types.rs  value_type.rs
src/value/numeric_types/: default_numeric_types.rs  num_traits_numeric_types.rs
tests/: close_values.csv  integration.rs  moving_average_tests.rs  rand.rs  regex.rs  serde.rs
