[package]
name = "evalexpr"
version = "7.2.15"
description = "A powerful arithmetic and boolean expression evaluator"
keywords = ["expression", "evaluate", "evaluator", "arithmetic", "boolean"]
categories = ["parsing", "game-engines"]
authors = ["isibboi <isibboi@gmail.com>"]
repository = "https://github.com/ISibboI/evalexpr.git"
homepage = "https://github.com/ISibboI/evalexpr"
documentation = "https://docs.rs/evalexpr"
readme = "README.md"
license = "MIT"
edition = "2018"
rust-version = "1.46.0"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "ISibboI/evalexpr" }
is-it-maintained-open-issues = { repository = "ISibboI/evalexpr" }

[lib]
name = "evalexpr"
path = "src/lib.rs"

[dependencies]
regex = { version = "1.5.5", optional = true}
serde = { version = "1.0.133", optional = true}
serde_derive = { version = "1.0.133", optional = true}
num-traits = "0.2.14"
indexmap = "2.4.0"
deepsize = "0.2.0"
ndarray = "0.15"
ndarray-linalg = { version = "0.15" }
linregress = "0.5"
workdays = "0.1.3"
#csv = "1.1"
#anyhow = "1.0.86"
thin_trait_object = { git = "https://github.com/gbemiga-viewserver/thin_trait_object", branch = "main" }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
paste = "1.0.14"
percent-encoding = "2.3.1"
lazy_static = "1.5.0"


[features]
serde_support = ["serde", "serde_derive"]
default = ["serde_support"]
regex_support = ["regex"]
serde_json_support = ["serde_json", "log"]

[dependencies.serde_json]
version = "*"
optional = true
[dependencies.log]
version = "*"
optional = true

[dev-dependencies]
ron = "0.7.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
